<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/signup_content_holder"
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:background="#ffffff" >

            <LinearLayout
                android:id="@+id/signup_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo_description"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/signup_banner"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="15dp" >
                
                <EditText
                    android:id="@+id/signup_uName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/uNameHint"
                    android:inputType="textPersonName" >
                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/signup_uEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/uEmailHint"
                    android:inputType="textEmailAddress" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/signup_uPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/uPassHint" />
                
                 <EditText
                    android:id="@+id/signup_uMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/uMobHint"
                    android:inputType="phone" />
                 
                <Button
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/style_blue_button"
                    android:onClick="signUp"
                    android:text="@string/formSignUp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>