<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical" >

        <!-- TODO: grey background to be tried: dbdbdb -->

        <RelativeLayout
            android:id="@+id/content_holder"
            android:layout_width="300dp"
            android:layout_height="290dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:background="#ffffff" >

            <LinearLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo_description"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signin_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/banner"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="15dp" >

                <EditText
                    android:id="@+id/signin_uName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/uEmailHint" >
                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/signin_uPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/uPassHint"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/style_blue_button"
                    android:onClick="signIn"
                    android:text="@string/formSignIn" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>